public/css/master_bulma.css
body {
  background-color: black;
  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('../media/smoky-theatre.jpg') no-repeat center center fixed;
  background-size: cover;
  padding-top: 100px;
  padding-bottom: 30px;
  height: 100%;
}

.navbar-item img {
    max-height: 3.2rem;
}

hr {
  margin-top: 0;
}

.filtered {
  color: #28a745;
  border-color: #28a745;
}

.dotted-border-bottom {
  border-bottom: dotted 1px #bbbbbb;
}

.table > tbody > tr > td {
     vertical-align: middle;
}

.border-tab {
  border: 1pt solid #ccc;
}

.sorted {
  text-decoration: underline;
}


.thead-dark {
  color: #fff;
  background-color: #212529;
}
.thead-light {
  color: #495057;
  background-color: #e9ecef;
  border-color: #dee2e6;
}

.thead-dark th {
  border-color: #32383e;
}



@media (min-width:641px) {

    .center-vertically {
        height: 80vh;

        align-items: center;
        display: flex;
        justify-content: center;

        position: relative;
    }

    .scrollbox {
      height: 85vh;
      overflow-y: scroll;
      border-radius: 5px;
    }

    .dark-transparency {
      background-color: rgba(0, 0, 0, 0.5) !important;
      color:white;
    }

    .light-transparency {
      background-color: rgba(255, 255, 255, 0.9) !important;
      color:black;
    }

  }

  /*\
   * Restore Bootstrap 3 "hidden" utility classes.
  \*/

  /* Breakpoint XS */
  @media (max-width: 575px)
  {
      .hidden-xs-down, .hidden-sm-down, .hidden-md-down, .hidden-lg-down, .hidden-xl-down,
      .hidden-xs-up,
      .hidden-unless-sm, .hidden-unless-md, .hidden-unless-lg, .hidden-unless-xl
      {
          display: none !important;
      }

  }

  /* Breakpoint SM */
  @media (min-width: 576px) and (max-width: 767px)
  {
      .hidden-sm-down, .hidden-md-down, .hidden-lg-down, .hidden-xl-down,
      .hidden-xs-up, .hidden-sm-up,
      .hidden-unless-xs, .hidden-unless-md, .hidden-unless-lg, .hidden-unless-xl
      {
          display: none !important;
      }
  }

  /* Breakpoint MD */
  @media (min-width: 768px) and (max-width: 991px)
  {
      .hidden-md-down, .hidden-lg-down, .hidden-xl-down,
      .hidden-xs-up, .hidden-sm-up, .hidden-md-up,
      .hidden-unless-xs, .hidden-unless-sm, .hidden-unless-lg, .hidden-unless-xl
      {
          display: none !important;
      }
  }

  /* Breakpoint LG */
  @media (min-width: 992px) and (max-width: 1199px)
  {
      .hidden-lg-down, .hidden-xl-down,
      .hidden-xs-up, .hidden-sm-up, .hidden-md-up, .hidden-lg-up,
      .hidden-unless-xs, .hidden-unless-sm, .hidden-unless-md, .hidden-unless-xl
      {
          display: none !important;
      }
  }

  /* Breakpoint XL */
  @media (min-width: 1200px)
  {
      .hidden-xl-down,
      .hidden-xs-up, .hidden-sm-up, .hidden-md-up, .hidden-lg-up, .hidden-xl-up,
      .hidden-unless-xs, .hidden-unless-sm, .hidden-unless-md, .hidden-unless-lg
      {
          display: none !important;
      }
  }

